internal/gatewayapi/testdata/tlsroute-hostname-intersection.in.yaml
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: tls
          protocol: TLS
          hostname: "*.example.com"
          port: 90
          tls:
            mode: Passthrough
          allowedRoutes:
            namespaces:
              from: All
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-2
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: tls
          protocol: TLS
          hostname: "*.com"
          port: 90
          tls:
            mode: Passthrough
          allowedRoutes:
            namespaces:
              from: All
tlsRoutes:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: TLSRoute
    metadata:
      namespace: default
      name: tlsroute-1
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
      hostnames:
        - "*.com"
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: TLSRoute
    metadata:
      namespace: default
      name: tlsroute-2
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-2
      hostnames:
        - "*.example.com"
      rules:
        - backendRefs:
            - name: service-1
              port: 8080
